--- a/index.html
+++ b/index.html
@@ -13,15 +13,25 @@
 </head>
 
 <body>
+    <img src="assets/img/photo.jpg" alt="Foto do código">
     <header>
-        <h1>Gabriel David</h1>
+        <h1 id="logo">Gabriel David</h1>
         <nav>
             <a href="" lang="en">Skills</a>
             <a href="">Projetos</a>
             <a href="">Sobre</a>
             <a href="">Contatos</a>
-            <a id="button" href="" lang="en">Download CV</a>
+            <a class="button" href="" lang="en">Download CV</a>
         </nav>
     </header>
+    
+    <div id="banner">
+        <h1 id="title-banner">Gabriel David</h1>
+        <h2 id="subtitle-banner">FrontEnd Developer</h2>
+    </div>
+    <div id="buttons">
+        <button class="button-first" href="" lang="en">Download CV</button>
+        <button class="button-second" href="">Contatos</button>
+    </div>
 </body>
 </html>
