Improves and fixes CSS of the box, title and subtitle

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/components/title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
+    <link rel="stylesheet" href="css/components/box.css">
 </head>
 
 <body>
@@ -27,9 +28,9 @@
         </nav>
     </header>
     
-    <div id="banner">
-        <h1 id="title-banner">Gabriel David</h1>
-        <h2 id="subtitle-banner">FrontEnd Developer</h2>
+    <div id="box">
+        <h2>Gabriel David</h2>
+        <h3>FrontEnd Developer</h3>
     </div>
     <div id="buttons">
         <button class="button-first" href="" lang="en">Download CV</button>
