--- a/index.html
+++ b/index.html
@@ -10,31 +10,35 @@
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/components/header.css">
     <link rel="stylesheet" href="css/components/title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/box.css">
+    <link rel="stylesheet" href="css/components/button.css">
+    <link rel="stylesheet" href="css/components/action.css">
+    <link rel="stylesheet" href="css/components/logo.css">
 </head>
 
 <body>
     <img src="assets/img/photo.jpg" alt="Foto do código">
-    <header>
-        <h1 id="logo">Gabriel David</h1>
+    <header class="header">
+        <h1 class="logo">Gabriel David</h1>
         <nav>
-            <a href="" lang="en">Skills</a>
-            <a href="">Projetos</a>
-            <a href="">Sobre</a>
-            <a href="">Contatos</a>
+            <a class="action" href="" lang="en">Skills</a>
+            <a class="action" href="">Projetos</a>
+            <a class="action" href="">Sobre</a>
+            <a class="action" href="">Contatos</a>
             <a class="button" href="" lang="en">Download CV</a>
         </nav>
     </header>
     
-    <div id="box">
-        <h2>Gabriel David</h2>
-        <h3>FrontEnd Developer</h3>
+    <div class="box">
+        <h2 class="title">Gabriel David</h2>
+        <h3 class="subtitle">FrontEnd Developer</h3>
     </div>
     <div id="buttons">
-        <button class="button-first" href="" lang="en">Download CV</button>
-        <button class="button-second" href="">Contatos</button>
+        <a class="button button-first" href="" lang="en">Download CV</a>
+        <a class=" button button-second" href="">Contatos</a>
     </div>
 </body>
 </html>
