--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/components/header.css">
+    <link rel="stylesheet" href="css/components/banner.css">
     <link rel="stylesheet" href="css/components/title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/box.css">
@@ -20,7 +21,6 @@
 </head>
 
 <body>
-    <img src="assets/img/photo.jpg" alt="Foto do código">
     <header class="header">
         <h1 class="logo">Gabriel David</h1>
         <nav>
@@ -31,14 +31,18 @@
             <a class="button" href="" lang="en">Download CV</a>
         </nav>
     </header>
-    
-    <div class="box">
-        <h2 class="title">Gabriel David</h2>
-        <h3 class="subtitle">FrontEnd Developer</h3>
-    </div>
-    <div id="buttons">
-        <a class="button button-first" href="" lang="en">Download CV</a>
-        <a class=" button button-second" href="">Contatos</a>
-    </div>
+    <section class="banner">
+        <div class="wrapper">
+            <div class="box">
+                <h2 class="title">Gabriel David</h2>
+                <h3 class="subtitle">FrontEnd Developer</h3>
+            </div>
+            
+            <div class="navigation">
+                <a class="button button-first" href="" lang="en">Download CV</a>
+                <a class=" button button-second" href="">Contatos</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
