--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/components/header.css">
     <link rel="stylesheet" href="css/components/banner.css">
+    <link rel="stylesheet" href="css/components/skills.css">
     <link rel="stylesheet" href="css/components/title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/box.css">
     <link rel="stylesheet" href="css/components/button.css">
     <link rel="stylesheet" href="css/components/action.css">
     <link rel="stylesheet" href="css/components/logo.css">
+    <link rel="stylesheet" href="css/components/background_1.css">
 </head>
 
 <body>
@@ -39,9 +41,14 @@
             </div>
             
             <div class="navigation">
-                <a class="button button-first" href="" lang="en">Download CV</a>
-                <a class=" button button-second" href="">Contatos</a>
+                <a class="button button_banner" href="" lang="en">Download CV</a>
+                <a class=" button button_banner" href="">Contatos</a>
             </div>
+        </div>
+    </section>
+    <section class="skills">
+        <div class="background_1">
+            <h2 class="title">Skills</h2>
         </div>
     </section>
 </body>
