Creates the bar component and completes the skills

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Press+Start+2P&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/components/header.css">
     <link rel="stylesheet" href="css/components/banner.css">
     <link rel="stylesheet" href="css/components/skills.css">
@@ -20,6 +19,7 @@
     <link rel="stylesheet" href="css/components/action.css">
     <link rel="stylesheet" href="css/components/logo.css">
     <link rel="stylesheet" href="css/components/background_1.css">
+    <link rel="stylesheet" href="css/components/bar.css">
 </head>
 
 <body>
@@ -46,9 +46,63 @@
             </div>
         </div>
     </section>
-    <section class="skills">
-        <div class="background_1">
-            <h2 class="title">Skills</h2>
+    <section class="skills background_1">
+        <h2 class="title">Skills</h2>
+
+        <div class="wrapper">
+            <div class="wrapper_left">
+                <div class="html box_skill"> 
+                    <div class="box_name_bar">
+                        <h3 class="subtitle font_size_skills">HTML</h3>
+                        <div class=bar><div class="progress_bar"></div></div>
+                    </div>
+                </div>
+                <div class="css box_skill"> 
+                    <div class="box_name_bar">
+                        <h3 class="subtitle font_size_skills">CSS</h3>
+                        <div class=bar><div class="progress_bar"></div></div>
+                    </div>
+                </div>
+                <div class="js box_skill"> 
+                    <div class="box_name_bar">
+                        <h3 class="subtitle font_size_skills">JavaScript</h3>
+                        <div class=bar><div class="progress_bar"></div></div>
+                    </div>
+                </div>
+                <div class="react box_skill"> 
+                    <div class="box_name_bar">
+                        <h3 class="subtitle font_size_skills">React</h3>
+                        <div class=bar><div class="progress_bar"></div></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="wrapper_right">
+                <div class="node_js box_skill"> 
+                    <div class="box_name_bar">
+                        <h3 class="subtitle font_size_skills">NodeJS</h3>
+                        <div class=bar><div class="progress_bar"></div></div>
+                    </div>
+                </div>
+                <div class="tdd box_skill"> 
+                    <div class="box_name_bar">
+                        <h3 class="subtitle font_size_skills">TDD</h3>
+                        <div class=bar><div class="progress_bar"></div></div>
+                    </div>
+                </div>
+                <div class="rest_api box_skill"> 
+                    <div class="box_name_bar">
+                        <h3 class="subtitle font_size_skills">Rest API</h3>
+                        <div class=bar><div class="progress_bar"></div></div>
+                    </div>
+                </div>
+                <div class="ux box_skill"> 
+                    <div class="box_name_bar">
+                        <h3 class="subtitle font_size_skills">UX</h3>
+                        <div class=bar><div class="progress_bar"></div></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </body>
