Create the project html

--- a/index.html
+++ b/index.html
@@ -12,20 +12,22 @@
     <link rel="stylesheet" href="css/components/header.css">
     <link rel="stylesheet" href="css/components/banner.css">
     <link rel="stylesheet" href="css/components/section.css">
+    <link rel="stylesheet" href="css/components/project.css">
     <link rel="stylesheet" href="css/components/main-title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/box.css">
     <link rel="stylesheet" href="css/components/button.css">
     <link rel="stylesheet" href="css/components/action.css">
-    <link rel="stylesheet" href="css/components/logo.css">
+    <link rel="stylesheet" href="css/components/main-logo.css">
     <link rel="stylesheet" href="css/components/skill-fd.css">
     <link rel="stylesheet" href="css/components/wrapper-skill.css">
+    <link rel="stylesheet" href="css/components/wrapper-project.css">
     <link rel="stylesheet" href="css/components/progress-bar.css">
 </head>
 
 <body>
     <header class="header">
-        <h1 class="logo">Gabriel David</h1>
+        <h1 class="main-logo">Gabriel David</h1>
         <nav>
             <a class="action" href="" lang="en">Skills</a>
             <a class="action" href="">Projetos</a>
@@ -136,6 +138,27 @@
                         <div class="bar"></div>
                     </div>
                 </div>
+            </article>
+        </div>
+    </section>
+    <section class="section -projects">
+        <h2 class="main-title -second">Projetos</h2>
+
+        <div class="wrapper-project">
+            <article class="project">
+                <a class="link"  href="https://gabe-dev.github.io/" target="_blank">
+                    <img class="logo" src="img/logo-gd.jpg" alt="Logo do portfolio">
+                </a>
+            </article>
+            <article class="project">
+                <a class="link" href="https://github.com/Gabe-dev" target="_blank">
+                    <img class="logo" src="img/logo-github.png" alt="Logo do Github">
+                </a>
+            </article>
+            <article class="project">
+                <a class="link" href="">
+                    <img class="logo" src="img/logo.png" alt="" target="_blank">
+                </a>
             </article>
         </div>
     </section>
