--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/components/main-title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/box.css">
-    <link rel="stylesheet" href="css/components/button.css">
+    <link rel="stylesheet" href="css/components/main-button.css">
     <link rel="stylesheet" href="css/components/main-action.css">
     <link rel="stylesheet" href="css/components/main-logo.css">
     <link rel="stylesheet" href="css/components/skill-fd.css">
@@ -33,7 +33,7 @@
             <a class="main-action" href="">Projetos</a>
             <a class="main-action" href="">Sobre</a>
             <a class="main-action" href="">Contatos</a>
-            <a class="button" href="" lang="en">Download CV</a>
+            <a class="main-button" href="" lang="en">Download CV</a>
         </nav>
     </header>
     <section class="banner">
@@ -44,8 +44,8 @@
             </div>
             
             <div class="navigation">
-                <a class="button button_banner" href="" lang="en">Download CV</a>
-                <a class=" button button_banner" href="">Contatos</a>
+                <a class="main-button -banner" href="" lang="en">Download CV</a>
+                <a class="main-button -banner" href="">Contatos</a>
             </div>
         </div>
     </section>
