--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/components/main-header.css">
-    <link rel="stylesheet" href="css/components/banner.css">
+    <link rel="stylesheet" href="css/components/main-banner.css">
     <link rel="stylesheet" href="css/components/section.css">
     <link rel="stylesheet" href="css/components/project.css">
     <link rel="stylesheet" href="css/components/main-title.css">
@@ -36,7 +36,7 @@
             <a class="main-button" href="" lang="en">Download CV</a>
         </nav>
     </header>
-    <section class="banner">
+    <section class="main-banner">
         <div class="wrapper">
             <div class="box">
                 <h2 class="main-title">Gabriel David</h2>
