--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/components/section.css">
     <link rel="stylesheet" href="css/components/project.css">
     <link rel="stylesheet" href="css/components/main-title.css">
-    <link rel="stylesheet" href="css/components/subtitle.css">
+    <link rel="stylesheet" href="css/components/main-subtitle.css">
     <link rel="stylesheet" href="css/components/main-box.css">
     <link rel="stylesheet" href="css/components/main-button.css">
     <link rel="stylesheet" href="css/components/main-action.css">
@@ -40,7 +40,7 @@
         <div class="wrapper">
             <div class="main-box">
                 <h2 class="main-title">Gabriel David</h2>
-                <h3 class="subtitle">FrontEnd Developer</h3>
+                <h3 class="main-subtitle">FrontEnd Developer</h3>
             </div>
             
             <div class="navigation">
