--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/components/main-header.css">
     <link rel="stylesheet" href="css/components/main-banner.css">
-    <link rel="stylesheet" href="css/components/section.css">
+    <link rel="stylesheet" href="css/components/main-section.css">
     <link rel="stylesheet" href="css/components/project.css">
     <link rel="stylesheet" href="css/components/main-title.css">
     <link rel="stylesheet" href="css/components/main-subtitle.css">
@@ -49,7 +49,7 @@
             </div>
         </div>
     </section>
-    <section class="section">
+    <section class="main-section">
         <h2 class="main-title -second">Skills</h2>
         <div class="wrapper-skill">
             <article class="skill-fd -html"> 
@@ -141,7 +141,7 @@
             </article>
         </div>
     </section>
-    <section class="section -projects">
+    <section class="main-section -projects">
         <h2 class="main-title -second">Projetos</h2>
 
         <div class="wrapper-project">
