--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/components/main-header.css">
     <link rel="stylesheet" href="css/components/main-banner.css">
     <link rel="stylesheet" href="css/components/main-section.css">
-    <link rel="stylesheet" href="css/components/project.css">
+    <link rel="stylesheet" href="css/components/card-project.css">
     <link rel="stylesheet" href="css/components/main-title.css">
     <link rel="stylesheet" href="css/components/main-subtitle.css">
     <link rel="stylesheet" href="css/components/main-box.css">
@@ -145,17 +145,17 @@
         <h2 class="main-title -second">Projetos</h2>
 
         <div class="wrapper-project">
-            <article class="project">
+            <article class="card-project">
                 <a class="link"  href="https://gabe-dev.github.io/" target="_blank">
                     <img class="logo" src="img/logo-gd.jpg" alt="Logo do portfolio">
                 </a>
             </article>
-            <article class="project">
+            <article class="card-project">
                 <a class="link" href="https://github.com/Gabe-dev" target="_blank">
                     <img class="logo" src="img/logo-github.png" alt="Logo do Github">
                 </a>
             </article>
-            <article class="project">
+            <article class="card-project">
                 <a class="link" href="">
                     <img class="logo" src="img/logo.png" alt="" target="_blank">
                 </a>
