Change CSS and HTML of section projects

--- a/index.html
+++ b/index.html
@@ -145,21 +145,21 @@
         <h2 class="main-title -second">Projetos</h2>
 
         <div class="wrapper-project">
-            <article class="card-project">
-                <a class="link"  href="https://gabe-dev.github.io/" target="_blank">
+            <a class="link"  href="https://gabe-dev.github.io/">
+                <figure class="card-project">
                     <img class="logo" src="img/logo-gd.jpg" alt="Logo do portfolio">
-                </a>
-            </article>
-            <article class="card-project">
-                <a class="link" href="https://github.com/Gabe-dev" target="_blank">
+                </figure>
+            </a>
+            <a class="link" href="https://github.com/Gabe-dev" target="_blank">
+                <figure class="card-project">
                     <img class="logo" src="img/logo-github.png" alt="Logo do Github">
-                </a>
-            </article>
-            <article class="card-project">
-                <a class="link" href="">
+                </figure>
+            </a>
+            <a class="link" href="">
+                <figure class="card-project">
                     <img class="logo" src="img/logo.png" alt="" target="_blank">
-                </a>
-            </article>
+                </figure>
+            </a>
         </div>
     </section>
 </body>
